--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ name = OverPAN
 [@Milla]
 installer = MakeMaker
 ExecDir.dir = bin
-;Git::Commit.allow_dirty = cnext
+;Git::Commit.allow_dirty = xyz
 Git::Tag.tag_format = OverPAN-%v
 Git::Commit.commit_msg = OverPAN-%v
 ;-remove = ReadmeAnyFromPod
