adjust ExecDir.dir

--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name = OverPAN
 
 [@Milla]
 installer = MakeMaker
-ExecDir.dir = bin
+ExecDir.dir = script
 ;Git::Commit.allow_dirty = xyz
 Git::Tag.tag_format = OverPAN-%v
 Git::Commit.commit_msg = OverPAN-%v
