Setup GitHub config

--- a/.github/workflows/testsuite.yml
+++ b/.github/workflows/testsuite.yml
@@ -77,5 +77,10 @@ jobs:
           cpanfile: cpanfile
           sudo: false
 
+      - name: Setup GitHub config
+        run: |
+          git config --global user.name "GitHub CI"
+          git config --global user.email "ci@github.com"
+
       - name: Running Tests
         run: prove -vl t/integration/*.t
